# Forge

./: .gitignore  README.md  dump.rdb  kill.sh  pyproject.toml  run.sh
backend/app/: database.py  docker_utils.py  main.py  models.py  schemas.py
examples/gmail_env/: action_models.py  gym_wrapper.py  initial_state.py  state_models.py
forge/: logging_utils.py  paths.py  settings.py
forge/benchmark/: _eval.py  _fine_tune.py  compiled_tasks.py  data_collector.py  env_quality.py  report.py  task_suite.py  transfer_pipeline.py
forge/cli/: main.py
forge/compiler/: override_validator.py  package_builder.py  sandbox_runner.py  validation_runner.py
forge/customization/: config.py  hooks.py  loader.py
forge/envgen/: _image_pull_http.py  a2a.py  artifact_bus.py  browser_runner.py  cli_runner.py  config.py  container.py  container_env_base.py  context.py  correctness_validator.py  episode_base.py  episode_runner.py  error_handling.py  executor.py  ml_reward.py  objective.py  planning.py  post_generation_validator.py  repair.py  research.py  schemas.py  source_bundle.py  tiered_reward.py
forge/extraction/: action_inferencer.py  entity_extractor.py  llm_client.py  pii_redactor.py  pipeline.py  policy_parser.py  prompts.py  schemas.py  task_generator.py
forge/runtime/: action.py  agent_logger.py  canonical.py  clustering.py  context.py  determinism.py  diff.py  env.py  env_builder.py  errors.py  interaction.py  layered_verifier.py  loss_analysis.py  network_isolation.py  observation_filter.py  policy.py  (+14 more)
frontend/: .env.example  package-lock.json  package.json
(+294 files in other folders)
